fix(Redesign): remove about and align to .info header

--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -116,8 +116,9 @@
   }
   .navbar-nav {
     > li {
-      margin-left: 2px;
       padding-top: 10px;
+      font-weight: 500;
+      font-size: 14px;
       a {
         &.refresh {
           img {
